# ProyectoTTI

./: .editorconfig  .gitignore  Analisis  LICENSE  Makefile.bat  Makefile.sh  Makefile_tests.sh  README.md  gmon.out  gprofmain  gprofmain2.0
data/: GEOS3.txt
doc/: Doxyfile
doc/html/: AccelHarmonic_8cpp.html  AccelHarmonic_8cpp.js  AccelHarmonic_8cpp_8o_8d_source.html  AccelHarmonic_8cpp__incl.map  AccelHarmonic_8cpp__incl.md5  AccelHarmonic_8cpp_a7f668d23f40f64900d52d3c77c9bacfa_cgraph.map  AccelHarmonic_8cpp_source.html  (+778 more)
include/: Accel.h  AccelHarmonic.h  AccelPointMass.h  AzElPa.h  Cheb3D.h  DEInteg.h  EccAnom.h  EqnEquinox.h  Frac.h  GHAMatrix.h  GLOBAL.h  G_AccelHarmonic.h  Geodetic.h  IERS.h  JPL_Eph_DE430.h  LTC.h  Legendre.h  MeanObliquity.h  MeasUpdate.h  Mjday.h  Mjday_TDB.h  NutAngles.h  NutMatrix.h  PoleMatrix.h  Position.h  PrecMatrix.h  R_x.h  R_y.h  R_z.h  SAT_Const.h  TimeUpdate.h  VarEqn.h  angl.h  const.h  elements.h  gast.h  gibbs.h  gmst.h  hgibbs.h  matrix.h  (+3 more)
src/: Accel.cpp  AccelHarmonic.cpp  AccelPointMass.cpp  AzElPa.cpp  CMakeLists.txt  Cheb3D.cpp  DEInteg.cpp  EccAnom.cpp  EqnEquinox.cpp  Frac.cpp  GHAMatrix.cpp  GLOBAL.cpp  G_AccelHarmonic.cpp  Geodetic.cpp  IERS.cpp  JPL_Eph_DE430.cpp  LTC.cpp  Legendre.cpp  MeanObliquity.cpp  MeasUpdate.cpp  Mjday.cpp  Mjday_TDB.cpp  NutAngles.cpp  NutMatrix.cpp  PoleMatrix.cpp  Position.cpp  PrecMatrix.cpp  R_x.cpp  R_y.cpp  R_z.cpp  TimeUpdate.cpp  VarEqn.cpp  angl.cpp  elements.cpp  gast.cpp  gibbs.cpp  gmst.cpp  hgibbs.cpp  matrix.cpp  sign_.cpp  (+2 more)
tests/: EKF_GEOS3.cpp  main.cpp  tests.cpp
(+478 files in other folders)
